@@ -4,7 +4,6 @@ import me.kap.gfw.tagexample.player.Role;
 import me.kap.gfw.tagexample.player.TagPlayer;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class RoleManager {
     private final Random random = new Random();
@@ -12,7 +11,7 @@ public class RoleManager {
     public void assignRandomRoles(int taggerAmount, Set<TagPlayer> players) {
         // Assign random taggers.
         for (int i = 0; i < taggerAmount; i++) {
-            List<TagPlayer> unassignedPlayers = (ArrayList<TagPlayer>) getPlayersWithRole(Role.UNASSIGNED, players);
+            List<TagPlayer> unassignedPlayers = (List<TagPlayer>) getPlayersWithRole(Role.UNASSIGNED, players);
 
             int index = random.nextInt(unassignedPlayers.size());
             TagPlayer chosenPlayer = unassignedPlayers.get(index);
@@ -32,6 +31,6 @@ public class RoleManager {
     public Collection<TagPlayer> getPlayersWithRole(Role role, Collection<TagPlayer> players) {
         return players.stream()
                 .filter(x -> x.getRole() == role)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
